# kile

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kateconfig  .kde-ci.yml  AUTHORS  Building-with-cmake.txt  CMakeLists.txt  CODE-FORMATTING-STYLE.txt  ChangeLog  INSTALL  Kile.kdevelop  Makefile.am  README  README-win.txt  README.MacOSX  README.cwl  TODO  TODO-2.0.txt  TODO-2.1  XmlMessages.sh  bughunting.html  kile-remote-control.txt  kile.kdevprj  kile.lsm  kile.upd  kile.xml  kile1.6_upd.pl  kile1.7_upd.pl  kile1.9-1_upd.pl  kile1.9_upd.pl  kile2.0-1_upd.pl  kile2.0-2_upd.pl  kile2.0-3_upd.pl  kile2.0-4_upd.pl  kile2.0-5_upd.pl  missing-stuff-from-branch.txt  uninstall.desktop  x-kilepr.desktop
doc/: CMakeLists.txt  Makefile.am  TODO  index.docbook  index.html  latexhelp.html  scripting.docbook  usermanual.html  usermenu.docbook
kile/: CMakeLists.txt  Makefile.am  Messages.sh  addoptiondialog.cpp  addoptiondialog.h  arraydialog.cpp  arraydialog.h  bibtexdialog.cpp  bibtexdialog.h  cleandialog.cpp  cleandialog.h  codecompletion.cpp  codecompletion.h  commandprocess.cpp  commandprocess.h  configcheckerdlg.cpp  configcheckerdlg.h  configcheckerwidget.cpp  configcheckerwidget.ui  configcheckerwidget.ui.h  configcodecompletion.cpp  configcodecompletion.h  configenvironment.cpp  configenvironment.h  configstructure.cpp  configstructure.h  configtester.cpp  configtester.h  convert.cpp  convert.h  create_hash_table  docpart.cpp  docpart.h  docpartui.rc  editorkeysequencemanager.cpp  editorkeysequencemanager.h  encodingconfigwidget.ui  encodingconfigwidget.ui.h  envconfigwidget.cpp  envconfigwidget.h  (+251 more)
kile/complete/: Makefile.am
kile/encodings/: CMakeLists.txt  Makefile.am  cp1250.enc  latin1.enc  latin3.enc  latin5.enc
kile/gfe/: Makefile.am  barOp.cpp  barOp.h  barOpData.cpp  barOpData.h  boxWidthOp.cpp  boxWidthOp.h  boxWidthOpData.cpp  boxWidthOpData.h  curveFit.cpp  curveFit.h  curveFitData.cpp  curveFitData.h  fileFilter.cpp  fileFilter.h  fileFilterData.cpp  fileFilterData.h  fileLegendTitle.cpp  fileLegendTitle.h  fileLegendTitleData.cpp  fileLegendTitleData.h  fileOptions.cpp  fileOptions.h  fileOptionsData.cpp  fileOptionsData.h  funcLegendTitle.cpp  funcLegendTitle.h  funcLegendTitleData.cpp  funcLegendTitleData.h  gnuCurveFit.cpp  gnuCurveFit.h  gnuInterface.cpp  gnuInterface.h  gnuMultiFile.cpp  gnuMultiFile.h  gnuMultiFunc.cpp  gnuMultiFunc.h  gnuPlotFile.cpp  gnuPlotFile.h  gnuPlotFunction.cpp  (+57 more)
kile/help/: CMakeLists.txt  Makefile.am  latex-tetex.lst  latex-texlive-3.9.lst
kile/icons/: CMakeLists.txt  Makefile.am  hisc-app-kile.svgz
kile/internal-testing/: bugs1.tex  env-grabbing-testing.tex  find-verbatim.tex  internaltesting.kilepr  math-mode-selector.tex  preview.tex  syntax-cite.tex  syntax-comment-updateStruct.tex  syntax-math1.tex  syntax-math2.tex  syntax-tabular.tex  teppich.eps
kile/kateplugin/: AUTHORS  kile.kdevelop
kile/pics/: CMakeLists.txt  Makefile.am  type_Scrlttr2.tex.kileicon
kile/symbols/: CMakeLists.txt  Makefile.am  arrows.tex  compile-all.sh  create-key-codes.pl  cyrillic.tex  definitions.tex  gesymb.cpp  gesymb.h  greek.tex  misc-math.tex  misc-text.tex  operators.tex  readme.symbols  relation.tex  special-characters.sh  special-characters.tex  special.tex  symbols.kilepr  testfile.tex
kile/syntax/: CMakeLists.txt  Makefile.am  bibtex-kile.xml  bibtex.xml  latex-kile.xml  latex.xml
kile/templates/: CMakeLists.txt  Makefile.am  template_Article.tex  template_Beamer.tex  template_Book.tex  template_Letter.tex  template_Prosper.tex  template_Report.tex  template_Scrartcl.tex  template_Scrbook.tex
kile/test/: CMakeLists.txt  Makefile.am  runTests.sh  test.bib  test_src.tex
src/: CMakeLists.txt  Messages.sh  _codecompletion.cpp  _codecompletion.h  abbreviationmanager.cpp  abbreviationmanager.h  cleandialog.cpp  cleandialog.h  codecompletion.cpp  codecompletion.h  config.h.cmake  configcodecompletion.cpp  configcodecompletion.h  configstructure.cpp  configstructure.h  configtester.cpp  configtester.h  configurationmanager.cpp  configurationmanager.h  convert.cpp  convert.h  docpart.cpp  docpart.h  documentinfo.cpp  documentinfo.h  editorcommands.cpp  editorcommands.h  editorextension.cpp  editorextension.h  editorkeysequencemanager.cpp  editorkeysequencemanager.h  errorhandler.cpp  errorhandler.h  eventfilter.cpp  eventfilter.h  floatdialog.cpp  floatdialog.h  generalconfigwidget.h  generalconfigwidget.ui  graphicsconfigwidget.h  (+158 more)
src/complete/: CMakeLists.txt
src/data/: CMakeLists.txt  biblatexentries.rc  bibtexentries.rc  kile.categories  kilestdtools-win.rc  kilestdtools.rc  org.kde.kile.appdata.xml
src/dialogs/: abbreviationinputdialog.cpp  abbreviationinputdialog.h  cleandialog.cpp  cleandialog.h  configcheckerdialog.cpp  configcheckerdialog.h  configurationdialog.cpp  configurationdialog.h  findfilesdialog.cpp  findfilesdialog.h  floatdialog.cpp  floatdialog.h  floatdialog_base.ui  includegraphicsdialog.cpp  includegraphicsdialog.h  includegraphicsdialog_base.ui  latexcommanddialog.cpp  latexcommanddialog.h  latexcommanddialog_base.ui  listselector.cpp  listselector.h  managetemplatesdialog.cpp  managetemplatesdialog.h  mathenvironmentdialog.cpp  mathenvironmentdialog.h  newfilewizard.cpp  newfilewizard.h  newtabulardialog.cpp  newtabulardialog.h  newtoolwizard.cpp  newtoolwizard.h  newtoolwizard_class_page.ui  newtoolwizard_toolname_page.ui  postscriptdialog.cpp  postscriptdialog.h  postscriptdialog_base.ui  projectdialogs.cpp  projectdialogs.h  quickdocumentdialog.cpp  quickdocumentdialog.h  (+17 more)
src/encodings/: CMakeLists.txt  latin1.enc  latin2.enc  latin9.enc
src/help/: latex-kile.lst  latex-tetex3.lst
src/internal-testing/: biblatexreqlines.bib  biblatexreqlines.kilepr  biblatexreqlines.tex  find-verbatim.tex  hello.tex  helloo.tex  internaltesting.kilepr  math-mode-selector.tex  syntax-bugs.tex  syntax-cite.tex  syntax-cmds.tex  syntax-comment-updateStruct.tex  syntax-generic.tex  syntax-math1.tex  syntax-math2.tex  syntax-noweb.tex  syntax-tabular.tex  syntax-todo.tex
src/latexmenu/: latexmenu.cpp  (+3 more)
(+1021 files in other folders)
