####### kdevelop will overwrite this part!!! (begin)##########
SUBDIRS = kile

mimetypetextdata_DATA = x-kilepr.desktop
mimetypetextdatadir = $(kde_mimedir)/text

update_DATA = kile.upd
update_SCRIPTS = kile1.6_upd.pl kile1.7_upd.pl kile1.9_upd.pl kile1.9-1_upd.pl kile2.0-1_upd.pl
updatedir = $(kde_datadir)/kconf_update

EXTRA_DIST = kile.kdevprj admin AUTHORS COPYING ChangeLog INSTALL README README.MacOSX TODO kile.lsm $(mimetypetextdata_DATA)



