####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = index.html latexhelp.html logo.png usermanual.html doc1.png doc2.png doc3.png doc4.png doc5.png doc6.png doc7.png doc8.png doc9.png doc10.png doc11.png doc12.png 

install-data-local:
	$(mkinstalldirs) $(kde_htmldir)/en/kile/
	$(INSTALL_DATA) $(srcdir)/index.html $(kde_htmldir)/en/kile/index.html
	$(mkinstalldirs) $(kde_datadir)/kile/doc/
	$(INSTALL_DATA) $(srcdir)/latexhelp.html $(kde_datadir)/kile/doc/latexhelp.html
	$(mkinstalldirs) $(kde_datadir)/kile/doc/
	$(INSTALL_DATA) $(srcdir)/logo.png $(kde_datadir)/kile/doc/logo.png
	$(mkinstalldirs) $(kde_datadir)/kile/doc/
	$(INSTALL_DATA) $(srcdir)/usermanual.html $(kde_datadir)/kile/doc/usermanual.html
	$(mkinstalldirs) $(kde_datadir)/kile/doc/
	$(INSTALL_DATA) $(srcdir)/doc1.png $(kde_datadir)/kile/doc/doc1.png
	$(mkinstalldirs) $(kde_datadir)/kile/doc/
	$(INSTALL_DATA) $(srcdir)/doc2.png $(kde_datadir)/kile/doc/doc2.png
	$(mkinstalldirs) $(kde_datadir)/kile/doc/
	$(INSTALL_DATA) $(srcdir)/doc3.png $(kde_datadir)/kile/doc/doc3.png
	$(mkinstalldirs) $(kde_datadir)/kile/doc/
	$(INSTALL_DATA) $(srcdir)/doc4.png $(kde_datadir)/kile/doc/doc4.png
	$(mkinstalldirs) $(kde_datadir)/kile/doc/
	$(INSTALL_DATA) $(srcdir)/doc5.png $(kde_datadir)/kile/doc/doc5.png
	$(mkinstalldirs) $(kde_datadir)/kile/doc/
	$(INSTALL_DATA) $(srcdir)/doc6.png $(kde_datadir)/kile/doc/doc6.png
	$(mkinstalldirs) $(kde_datadir)/kile/doc/
	$(INSTALL_DATA) $(srcdir)/doc7.png $(kde_datadir)/kile/doc/doc7.png
	$(mkinstalldirs) $(kde_datadir)/kile/doc/
	$(INSTALL_DATA) $(srcdir)/doc8.png $(kde_datadir)/kile/doc/doc8.png
	$(mkinstalldirs) $(kde_datadir)/kile/doc/
	$(INSTALL_DATA) $(srcdir)/doc9.png $(kde_datadir)/kile/doc/doc9.png
	$(mkinstalldirs) $(kde_datadir)/kile/doc/
	$(INSTALL_DATA) $(srcdir)/doc10.png $(kde_datadir)/kile/doc/doc10.png
	$(mkinstalldirs) $(kde_datadir)/kile/doc/
	$(INSTALL_DATA) $(srcdir)/doc11.png $(kde_datadir)/kile/doc/doc11.png
	$(mkinstalldirs) $(kde_datadir)/kile/doc/
	$(INSTALL_DATA) $(srcdir)/doc12.png $(kde_datadir)/kile/doc/doc12.png

uninstall-local:
	-rm -f $(kde_htmldir)/en/kile/index.html
	-rm -f $(kde_datadir)/kile/doc/latexhelp.html
	-rm -f $(kde_datadir)/kile/doc/logo.png
	-rm -f $(kde_datadir)/kile/doc/usermanual.html
	-rm -f $(kde_datadir)/kile/doc/doc1.png
	-rm -f $(kde_datadir)/kile/doc/doc2.png
	-rm -f $(kde_datadir)/kile/doc/doc3.png
	-rm -f $(kde_datadir)/kile/doc/doc4.png
	-rm -f $(kde_datadir)/kile/doc/doc5.png
	-rm -f $(kde_datadir)/kile/doc/doc6.png
	-rm -f $(kde_datadir)/kile/doc/doc7.png
	-rm -f $(kde_datadir)/kile/doc/doc8.png
	-rm -f $(kde_datadir)/kile/doc/doc9.png
	-rm -f $(kde_datadir)/kile/doc/doc10.png
	-rm -f $(kde_datadir)/kile/doc/doc11.png
	-rm -f $(kde_datadir)/kile/doc/doc12.png

####### kdevelop will overwrite this part!!! (end)############

